package TuEvento.Backend.service.email;

import TuEvento.Backend.dto.email.ActivationCodeEmailDto;
import org.springframework.stereotype.Service;

@Service
public class ActivationEmailService extends BaseEmailService {

    /**
     * Sends the activation code to the user who just registered.
     * @param dto contains recipient's email, activation code, and user full name
     */
    public void sendActivationCodeEmail(ActivationCodeEmailDto dto) {
        String subject = "Activa tu cuenta - Tu Evento";

        String bodyMail = String.format("""
            <!DOCTYPE html>
            <html lang="es">
            <head>
                <meta charset="UTF-8">
                <meta name="viewport" content="width=device-width, initial-scale=1.0">
                <title>Activación de Cuenta</title>
                <style>
                    body { margin: 0; padding: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: linear-gradient(135deg, #f5f3ff 0%%, #ede9fe 100%%); color: #1f1d2e; line-height: 1.6; }
                    .email-wrapper { max-width: 650px; margin: 20px auto; background-color: #ffffff; border-radius: 16px; overflow: hidden; box-shadow: 0 8px 32px rgba(124, 58, 237, 0.12); border: 1px solid rgba(124, 58, 237, 0.08); }
                    .email-header { background: linear-gradient(135deg, #8b5cf6 0%%, #a855f7 50%%, #c084fc 100%%); color: white; padding: 45px 30px; text-align: center; position: relative; }
                    .email-header::before { content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><defs><pattern id="grain" width="100" height="100" patternUnits="userSpaceOnUse"><circle cx="25" cy="25" r="1" fill="%%23ffffff" opacity="0.1"/><circle cx="75" cy="75" r="1" fill="%%23ffffff" opacity="0.08"/><circle cx="50" cy="10" r="0.5" fill="%%23ffffff" opacity="0.06"/></pattern></defs><rect width="100" height="100" fill="url(%%23grain)"/></svg>'); }
                    .email-header h1 { margin: 0; font-size: 30px; font-weight: 700; position: relative; z-index: 1; text-shadow: 0 2px 4px rgba(0,0,0,0.1); }
                    .header-subtitle { font-size: 17px; opacity: 0.95; margin-top: 10px; position: relative; z-index: 1; }
                    .email-body { padding: 45px 35px; }
                    .email-body h2 { margin-top: 0; color: #6d28d9; font-size: 26px; font-weight: 600; margin-bottom: 25px; }
                    .greeting-text { font-size: 17px; margin-bottom: 30px; color: #374151; line-height: 1.7; }
                    .activation-card { background: linear-gradient(135deg, #faf7ff 0%%, #f3f0ff 100%%); padding: 35px; border-radius: 14px; margin: 30px 0; border-left: 5px solid #8b5cf6; box-shadow: 0 4px 12px rgba(124, 58, 237, 0.08); text-align: center; }
                    .activation-code { font-size: 36px; font-weight: bold; color: #8b5cf6; letter-spacing: 6px; background: white; padding: 25px 30px; border-radius: 10px; border: 3px dashed #8b5cf6; margin: 25px 0; display: inline-block; box-shadow: inset 0 2px 4px rgba(0,0,0,0.05); }
                    .code-instructions { font-size: 16px; color: #4b5563; margin: 20px 0 15px 0; font-weight: 500; }
                    .expiry-notice { background: #fef3c7; padding: 18px 20px; border-radius: 10px; margin: 25px 0; border-left: 4px solid #f59e0b; color: #92400e; font-size: 15px; font-weight: 500; }
                    .security-notice { background: #f0f9ff; padding: 18px 20px; border-radius: 10px; margin: 25px 0; border-left: 4px solid #0ea5e9; color: #0c4a6e; font-size: 15px; }
                    .email-footer { text-align: center; font-size: 14px; color: #6b7280; padding: 35px 25px; background: linear-gradient(135deg, #f9fafb 0%%, #f3f4f6 100%%); border-top: 1px solid #e5e7eb; }
                    .footer-note { margin-bottom: 12px; line-height: 1.5; }
                    .footer-signature { font-weight: 600; color: #8b5cf6; font-size: 15px; }
                    @media only screen and (max-width: 650px) {
                        .email-wrapper { margin: 10px; border-radius: 12px; }
                        .email-body, .email-header { padding: 30px 20px; }
                        .email-header h1 { font-size: 26px; }
                        .activation-card { padding: 30px 20px; }
                        .activation-code { font-size: 32px; padding: 20px; letter-spacing: 4px; }
                        .email-body h2 { font-size: 22px; }
                        .greeting-text { font-size: 16px; }
                    }
                </style>
            </head>
            <body>
                <div class="email-wrapper">
                    <div class="email-header">
                        <h1>¡Bienvenido a Tu Evento!</h1>
                        <div class="header-subtitle">Activa tu cuenta para comenzar</div>
                    </div>
                    <div class="email-body">
                        <h2>Hola %s</h2>
                        <p class="greeting-text">Gracias por registrarte en Tu Evento. Para completar tu registro y comenzar a disfrutar de todos nuestros servicios, necesitas activar tu cuenta.</p>

                        <div class="activation-card">
                            <h3 style="color: #6d28d9; margin-bottom: 15px; font-size: 20px;">Tu Código de Activación</h3>
                            <p class="code-instructions">Ingresa este código en el campo para verificar tu cuenta:</p>
                            <div class="activation-code">%s</div>
                            <div class="expiry-notice">
                                <strong>Este código expira en 1 minuto por seguridad.</strong>
                            </div>
                        </div>

                        <div class="security-notice">
                            <strong>Importante:</strong> Si no solicitaste esta cuenta, puedes ignorar este mensaje de forma segura. Tu dirección de email no será utilizada sin tu consentimiento.
                        </div>
                    </div>
                    <div class="email-footer">
                        <div class="footer-note">Este correo fue generado automáticamente por Tu Evento.<br>No respondas a este mensaje.</div>
                        <div class="footer-signature">Equipo de Tu Evento</div>
                    </div>
                </div>
            </body>
            </html>
            """,
            dto.getUserFullName(),
            dto.getActivationCode()
        );

        try {
            emailSender(dto.getTo(), subject, bodyMail);
        } catch (Exception e) {
            e.printStackTrace();
        }
    }
}